--- a/locale/km.json
+++ b/locale/km.json
@@ -954,8 +954,6 @@
   "ACK_DELETE_PUBLIC_LINK": "តំណសាធារណៈត្រូវបានលុប",
   "Q_FORGOT_PASS_PHRASE": "ភ្លេចឃ្លាឆ្លង",
   "GET_YOUT_CLOUD_COMPUTER": "ទទួលបានកុំព្យូទ័រពពករបស់អ្នក។",
-  "VALIDATION_SENT_TO": "តំណ​មួយ​ត្រូវ​បាន​ផ្ញើ​ទៅ {0}។ <br> ចុចលើវាដើម្បីបើកកុំព្យូទ័ររបស់អ្នក។",
-  "IF_YOU_DIDNT_RECEIVED_EMAIL": "ប្រសិនបើអ្នកមិនបានទទួលវាទេ សូមពិនិត្យមើលសារឥតបានការរបស់អ្នក ហើយត្រូវប្រាកដថាអាសយដ្ឋានអ៊ីមែលរបស់អ្នកត្រឹមត្រូវ។",
   "D_YOUR_CLOUD_DESKTOP_IS_READY": "ផ្ទៃតុលើពពករបស់អ្នករួចរាល់ហើយ!",
   "ADD_CONTACT": "ព័ត៌មានបន្ថែម",
   "DOCUMENT_ACCESS": "ការចូលប្រើឯកសារ",
@@ -1417,7 +1415,6 @@
   "INFO_MANAGED_BY_ADMINISTRATORS": "ទំនាក់ទំនងរបស់ស្ថាប័នត្រូវបានគ្រប់គ្រងដោយអ្នកគ្រប់គ្រង។ អ្នក​អាច​ទុក​តែ​ក្នុង​ប័ណ្ណសារ ឬ​មិន​ទុក​ពួកវា​ក្នុង​ប័ណ្ណសារ​ប៉ុណ្ណោះ។",
   "RESEND_INVITE_TO": "ផ្ញើការអញ្ជើញទៅ",
   "POPUP_RESEND_INVITE_TO": "ផ្ញើការអញ្ជើញទៅ",
-  "B2B_REGISTRATION_SUCCESS_MESSAGE": "អ្នកបានទទួលអ៊ីមែលបញ្ជាក់។ <br> ប្រសិនបើអ្នកមិនឃើញវាទេ សូមពិនិត្យមើលអ៊ីមែល spam របស់អ្នក។",
   "URL_ADDRESS_CANNOT_CHANGEBLE": "អាសយដ្ឋាន URL នឹងមានលក្ខណៈច្បាស់លាស់ <br> ហើយមិនអាចកែប្រែបានទេ។",
   "WELCOME_TO_ORG_SYSTEM": "សូមស្វាគមន៍មកកាន់ស្ថាប័ន {0}",
   "STEP_CHOOSE_URL_ADDRESS": "ជំហានទី 1/4 - ជ្រើសរើសអាសយដ្ឋាន URL",
@@ -1914,5 +1911,9 @@
   "CONTINUE_WITH_GOOGLE": "បន្តជាមួយ Google",
   "CONTINUE_WITH_APPLEID": "បន្តជាមួយ AppleID",
   "CONTINUE_WITH_EMAIL": "បន្តជាមួយអ៊ីមែល",
-  "OR": "ឬ"
+  "OR": "ឬ",
+  "ENTER_VERIFICATION_CODE": "សូមបញ្ចូលលេខកូដផ្ទៀងផ្ទាត់ដែលបានផ្ញើទៅកាន់អាសយដ្ឋានអ៊ីមែលរបស់អ្នក {0}។",
+  "VALIDATION_SENT_TO": "យើងបានផ្ញើលេខកូដទៅអ្នកហើយ",
+  "RESEND_CODE": "ផ្ញើលេខកូដឡើងវិញ",
+  "DIDNT_GET_EMAIL": "មិនបានទទួលអ៊ីមែលទេ? សូមពិនិត្យមើលសារឥតបានការ"
 }
