--- a/locale/ru.json
+++ b/locale/ru.json
@@ -958,8 +958,6 @@
   "ACK_DELETE_PUBLIC_LINK": "Публичная ссылка была удалена",
   "Q_FORGOT_PASS_PHRASE": "Забыли кодовую фразу",
   "GET_YOUT_CLOUD_COMPUTER": "Получите ваш облачный компьютер",
-  "VALIDATION_SENT_TO": "Ссылка отправлена ​​на {0}. <br> Нажмите на нее, чтобы открыть рабочий стол.",
-  "IF_YOU_DIDNT_RECEIVED_EMAIL": "Если вы не получили его, проверьте свой спам и убедитесь, что ваш адрес электронной почты правильный.",
   "D_YOUR_CLOUD_DESKTOP_IS_READY": "Ваш облачный рабочий стол готов!",
   "ADD_CONTACT": "Добавить контакт",
   "DOCUMENT_ACCESS": "Доступ к документу",
@@ -1421,7 +1419,6 @@
   "INFO_MANAGED_BY_ADMINISTRATORS": "Контакты организации управляются администраторами. Вы можете только архивировать или разархивировать их.",
   "RESEND_INVITE_TO": "Отправить приглашение повторно",
   "POPUP_RESEND_INVITE_TO": "Отправить приглашение повторно",
-  "B2B_REGISTRATION_SUCCESS_MESSAGE": "Вы получили письмо с подтверждением. <br> Если вы его не видите, проверьте свои спам-сообщения.",
   "URL_ADDRESS_CANNOT_CHANGEBLE": "URL-адрес будет окончательным <br> и не может быть изменен",
   "WELCOME_TO_ORG_SYSTEM": "Добро пожаловать в систему {0}",
   "STEP_CHOOSE_URL_ADDRESS": "Шаг 1/4 - Выберите URL-адрес",
@@ -1914,5 +1911,9 @@
   "CONTINUE_WITH_GOOGLE": "Продолжить с Google",
   "CONTINUE_WITH_APPLEID": "Продолжить с AppleID",
   "CONTINUE_WITH_EMAIL": "Продолжить с электронной почтой",
-  "OR": "или"
+  "OR": "или",
+  "ENTER_VERIFICATION_CODE": "Введите проверочный код, отправленный на ваш адрес электронной почты {0}.",
+  "VALIDATION_SENT_TO": "Ссылка отправлена ​​на {0}. <br> Нажмите на нее, чтобы открыть рабочий стол.",
+  "RESEND_CODE": "Отправить код повторно",
+  "DIDNT_GET_EMAIL": "Не получили письмо? Проверьте спам."
 }
