--- a/locale/km.json
+++ b/locale/km.json
@@ -1700,7 +1700,6 @@
   "DRUMEE_COMPANY": "ក្រុមហ៊ុន Drumee",
   "PREPARING_PRESENTATION": "បទបង្ហាញរបស់អ្នកកំពុងត្រូវបានរៀបចំ",
   "COMPANY_LOGIN": "ការចូលប្រើឯកជន",
-  "LOGIN_PERSONAL_ACCOUNT": "",
   "LOGIN_DRUMEE_ACCOUNT": "ចូលទៅគណនី Drumee របស់អ្នក។",
   "DRUMEE_THANKS": "សូមអរគុណចំពោះការប្រើប្រាស់ Drumee",
   "SYSTEM_SOUND_TIPS": "ដើម្បីធ្វើឱ្យការជូនដំណឹង ឬការហៅទូរសព្ទអាចស្តាប់បាន សូមចុចលើផ្នែកណាមួយនៃផ្ទៃតុ Drumee របស់អ្នក។",
@@ -1915,5 +1914,6 @@
   "ENTER_VERIFICATION_CODE": "សូមបញ្ចូលលេខកូដផ្ទៀងផ្ទាត់ដែលបានផ្ញើទៅកាន់អាសយដ្ឋានអ៊ីមែលរបស់អ្នក {0}។",
   "VALIDATION_SENT_TO": "យើងបានផ្ញើលេខកូដទៅអ្នកហើយ",
   "RESEND_CODE": "ផ្ញើលេខកូដឡើងវិញ",
-  "DIDNT_GET_EMAIL": "មិនបានទទួលអ៊ីមែលទេ? សូមពិនិត្យមើលសារឥតបានការ"
+  "DIDNT_GET_EMAIL": "មិនបានទទួលអ៊ីមែលទេ? សូមពិនិត្យមើលសារឥតបានការ",
+  "LOGIN_PERSONAL_ACCOUNT": "ចូលទៅក្នុងគណនីរបស់ខ្ញុំ"
 }
