--- a/locale/ru.json
+++ b/locale/ru.json
@@ -1704,7 +1704,6 @@
   "DRUMEE_COMPANY": "Drumee Company",
   "PREPARING_PRESENTATION": "Ваша презентация готовится",
   "COMPANY_LOGIN": "Частный доступ",
-  "LOGIN_PERSONAL_ACCOUNT": "Войти в индивидуальную учетную запись",
   "LOGIN_DRUMEE_ACCOUNT": "Войдите в свою учетную запись на Драми",
   "DRUMEE_THANKS": "Спасибо за использование Drumee",
   "SYSTEM_SOUND_TIPS": "Чтобы сделать звук уведомления или звонка слышимым, щелкните один раз в любой части рабочего стола Drumee.",
@@ -1915,5 +1914,6 @@
   "ENTER_VERIFICATION_CODE": "Введите проверочный код, отправленный на ваш адрес электронной почты {0}.",
   "VALIDATION_SENT_TO": "Ссылка отправлена ​​на {0}. <br> Нажмите на нее, чтобы открыть рабочий стол.",
   "RESEND_CODE": "Отправить код повторно",
-  "DIDNT_GET_EMAIL": "Не получили письмо? Проверьте спам."
+  "DIDNT_GET_EMAIL": "Не получили письмо? Проверьте спам.",
+  "LOGIN_PERSONAL_ACCOUNT": "Войти в мою учетную запись"
 }
