Remove welcome_signup

--- a/locale/en.json
+++ b/locale/en.json
@@ -489,7 +489,6 @@
   "NEW_LAYOUT": "New layout",
   "NEW_MENU": "New menu",
   "NEW_PAGE": "New page",
-  "NEW_PASSWORD": "New password",
   "NEW_SECTION_GOES_ABOVE": "The new section goes above",
   "NEW_SECTION_GOES_BELOW": "The new section goes below\n",
   "NEW_SECTION_GOES_HERE": "New section goes here\n",
@@ -504,7 +503,6 @@
   "NOT_SPAM": "Not spam",
   "NOT_YET_IMPLEMENTED": "Coming soon",
   "NOW_YOU_ARE_LOGGED_OUT": "Now you are logged out…",
-  "NO_ACCOUNT_SIGNUP": "No account? Sign up",
   "NO_CANCEL": "No, cancel!",
   "NO_COMMUNITY": "There is no community being selected for this operation!",
   "NO_CONTENT": "No content yet",
@@ -641,10 +639,9 @@
   "Q_DELETE_ACCOUNT": "Delete account and all data?",
   "Q_DELETE_ALL_FILES": "<p>Do you want to delete </p><p>all files in the trash? </p>",
   "Q_DELETE_FOLLOWING_CONTRIBUTORS": "Want to remove the following contributors?",
-  "Q_FORGOT_PASSWORD": "Forgot password",
+  "Q_FORGOT_PASSWORD": "Forgot password?",
   "Q_FORGOT_THE_PASS_PHRASE": "Forgot the password?",
   "Q_HAVE_AN_ACCOUNT": "Have an account?",
-  "Q_NO_ACCOUNT": "No account",
   "RANDOMSLIDESHOW": "Random slideshow",
   "RATING": "Rating",
   "RATIOS": "Ratios",
@@ -1904,5 +1901,15 @@
   "MONTHS": "Months",
   "YEARS": "Years",
   "HOURS": "Hour(s)",
-  "EXPORT_AS_HTML": "Export to HTML"
+  "EXPORT_AS_HTML": "Export to HTML",
+  "PASSWORD_STRENGTH": "Password strength",
+  "WEAK": "Weak",
+  "STRONG": "Strong",
+  "VERY_STRONG": "Very strong",
+  "PASSWORD_AT_LEAST": "Password must be at least {0} characters",
+  "WE_HAVE_SENT_CODE": "We have sent a code to your address {0} so that you can set a new password.",
+  "NEW_PASSWORD": "New password",
+  "SET_NEW_PASSWORD": "Set new password",
+  "NEW_CODE_RESENT": "A new code has been resent",
+  "PASSWORD_MATCH": "Password match"
 }
