--- a/locale/fr.json
+++ b/locale/fr.json
@@ -489,7 +489,6 @@
   "NEW_LAYOUT": "Nouvelle présentation",
   "NEW_MENU": "Nouveau menu",
   "NEW_PAGE": "Nouvelle page",
-  "NEW_PASSWORD": "Nouveau mot de passe",
   "NEW_SECTION_GOES_ABOVE": "La nouvelle section se placera au-dessus",
   "NEW_SECTION_GOES_BELOW": "La nouvelle section se placera ci-dessous",
   "NEW_SECTION_GOES_HERE": "La nouvelle section va ici",
@@ -504,7 +503,6 @@
   "NOT_SPAM": "Pas du spam",
   "NOT_YET_IMPLEMENTED": "Bientôt disponible",
   "NOW_YOU_ARE_LOGGED_OUT": "Vous êtes maintenant déconnecté(e)…",
-  "NO_ACCOUNT_SIGNUP": "Pas de compte ? Je m'enregistre",
   "NO_CANCEL": "Non, annuler !",
   "NO_COMMUNITY": "Il n'y a pas de communauté sélectionnée pour cette action !",
   "NO_CONTENT": "Pas encore de contenu",
@@ -641,10 +639,9 @@
   "Q_DELETE_ACCOUNT": "Supprimer le compte et toutes les données ?",
   "Q_DELETE_ALL_FILES": "<p>Voulez-vous supprimer</p><p> tous les fichiers de la poubelle ?</p>",
   "Q_DELETE_FOLLOWING_CONTRIBUTORS": "Vous souhaitez retirer les contributeurs suivants ?",
-  "Q_FORGOT_PASSWORD": "Mot de passe oublié ",
+  "Q_FORGOT_PASSWORD": "Mot de passe oublié?",
   "Q_FORGOT_THE_PASS_PHRASE": "Vous avez oublié le mot de passe ?",
   "Q_HAVE_AN_ACCOUNT": "Avoir un compte ?",
-  "Q_NO_ACCOUNT": "Pas de compte ",
   "RANDOMSLIDESHOW": "Lecture aléatoire",
   "RATING": "Livre d'or",
   "RATIOS": "Ratios",
@@ -1904,5 +1901,15 @@
   "MONTHS": "Mois",
   "YEARS": "Années",
   "HOURS": "Heure(s)",
-  "EXPORT_AS_HTML": "Exporter en HTML"
+  "EXPORT_AS_HTML": "Exporter en HTML",
+  "PASSWORD_STRENGTH": "Force du mot de passe",
+  "WEAK": "Faible",
+  "STRONG": "Fort",
+  "VERY_STRONG": "Très fort",
+  "PASSWORD_AT_LEAST": "Le mot de passe doit contenir au moins {0} caractères",
+  "WE_HAVE_SENT_CODE": "Nous avons envoyé un code à votre adresse {0} afin que vous puissiez définir un nouveau mot de passe.",
+  "NEW_PASSWORD": "Nouveau mot de passe",
+  "SET_NEW_PASSWORD": "Définir un nouveau mot de passe",
+  "NEW_CODE_RESENT": "Un nouveau code a été renvoyé.",
+  "PASSWORD_MATCH": "Correspondance du mot de passe"
 }
