--- a/locale/km.json
+++ b/locale/km.json
@@ -484,7 +484,6 @@
   "NEW_LAYOUT": "ប្លង់ថ្មី។",
   "NEW_MENU": "ម៉ឺនុយថ្មី។",
   "NEW_PAGE": "ទំព័រថ្មី។",
-  "NEW_PASSWORD": "ពាក្យសម្ងាត់​ថ្មី",
   "NEW_SECTION_GOES_ABOVE": "ផ្នែកថ្មីទៅខាងលើ",
   "NEW_SECTION_GOES_BELOW": "ផ្នែកថ្មីទៅខាងក្រោម",
   "NEW_SECTION_GOES_HERE": "ផ្នែកថ្មីទៅខាងក្រោម\n",
@@ -499,7 +498,6 @@
   "NOT_SPAM": "មិនមែនជាសារឥតបានការទេ។",
   "NOT_YET_IMPLEMENTED": "មកដល់ឆាប់ៗនេះ",
   "NOW_YOU_ARE_LOGGED_OUT": "ឥឡូវ​នេះ​អ្នក​ត្រូវ​បាន​ចេញ​ពី…",
-  "NO_ACCOUNT_SIGNUP": "គ្មានគណនី? ចុះ​ឈ្មោះ",
   "NO_CANCEL": "ទេ លុបចោល!",
   "NO_COMMUNITY": "មិនមានសហគមន៍ត្រូវបានជ្រើសរើសសម្រាប់ប្រតិបត្តិការនេះទេ!",
   "NO_CONTENT": "មិនមានធាតុនៅឡើយទេ",
@@ -636,10 +634,9 @@
   "Q_DELETE_ACCOUNT": "លុបគណនី និងទិន្នន័យទាំងអស់?",
   "Q_DELETE_ALL_FILES": "<p>តើ​អ្នក​ចង់​លុប </p><p>ឯកសារ​ទាំងអស់​ក្នុង​ធុង​សំរាម​ដែរ​ឬ​ទេ? </p>",
   "Q_DELETE_FOLLOWING_CONTRIBUTORS": "ចង់​ដក​អ្នក​ចូលរួម​ចំណែក​ខាង​ក្រោម​ចេញ​ទេ?",
-  "Q_FORGOT_PASSWORD": "ភ្លេច​លេខសំងាត់​",
+  "Q_FORGOT_PASSWORD": "ភ្លេច​លេខសំងាត់​?",
   "Q_FORGOT_THE_PASS_PHRASE": "ភ្លេចលេខសម្ងាត់?",
   "Q_HAVE_AN_ACCOUNT": "មានគណនីមួយ?",
-  "Q_NO_ACCOUNT": "គ្មានគណនី",
   "RANDOMSLIDESHOW": "ការបញ្ចាំងស្លាយចៃដន្យ",
   "RATING": "ការវាយតម្លៃ",
   "RATIOS": "សមាមាត្រ",
@@ -1904,5 +1901,15 @@
   "MONTHS": "ខែ",
   "YEARS": "ឆ្នាំ",
   "HOURS": "ម៉ោង",
-  "EXPORT_AS_HTML": "នាំចេញទៅ HTML"
+  "EXPORT_AS_HTML": "នាំចេញទៅ HTML",
+  "PASSWORD_STRENGTH": "ភាពខ្លាំងនៃពាក្យសម្ងាត់",
+  "WEAK": "ខ្សោយ",
+  "STRONG": "ខ្លាំង",
+  "VERY_STRONG": "ខ្លាំង​ណាស់",
+  "PASSWORD_AT_LEAST": "ពាក្យសម្ងាត់ត្រូវតែមានយ៉ាងហោចណាស់ {0} តួអក្សរ",
+  "WE_HAVE_SENT_CODE": "យើងបានផ្ញើលេខកូដទៅកាន់អាសយដ្ឋានរបស់អ្នក {0} ដើម្បីឱ្យអ្នកអាចកំណត់ពាក្យសម្ងាត់ថ្មី។",
+  "NEW_PASSWORD": "ពាក្យសម្ងាត់​ថ្មី",
+  "SET_NEW_PASSWORD": "កំណត់ពាក្យសម្ងាត់ថ្មី",
+  "NEW_CODE_RESENT": "លេខកូដថ្មីមួយត្រូវបានផ្ញើឡើងវិញ",
+  "PASSWORD_MATCH": "ការផ្គូផ្គងពាក្យសម្ងាត់"
 }
