--- a/locale/ru.json
+++ b/locale/ru.json
@@ -489,7 +489,6 @@
   "NEW_LAYOUT": "Новый макет",
   "NEW_MENU": "Новое меню",
   "NEW_PAGE": "Новая страница",
-  "NEW_PASSWORD": "Новый пароль",
   "NEW_SECTION_GOES_ABOVE": "Новый раздел будет размещен выше",
   "NEW_SECTION_GOES_BELOW": "Новый раздел будет размещен ниже",
   "NEW_SECTION_GOES_HERE": "Новый раздел идет здесь",
@@ -504,7 +503,6 @@
   "NOT_SPAM": "Не спам",
   "NOT_YET_IMPLEMENTED": "Скоро появится",
   "NOW_YOU_ARE_LOGGED_OUT": "Вы вышли из системы...",
-  "NO_ACCOUNT_SIGNUP": "Нет аккаунта? Зарегистрируйтесь",
   "NO_CANCEL": "Отмена",
   "NO_COMMUNITY": "Для данного действия не выбрано сообщество.",
   "NO_CONTENT": "Товара пока нет",
@@ -641,10 +639,9 @@
   "Q_DELETE_ACCOUNT": "Удалить аккаунт и все данные?",
   "Q_DELETE_ALL_FILES": "<p>Хотите удалить</p><p>все файлы в корзине? </p>",
   "Q_DELETE_FOLLOWING_CONTRIBUTORS": "Хотите удалить следующих участников?",
-  "Q_FORGOT_PASSWORD": "Забыли пароль",
+  "Q_FORGOT_PASSWORD": "Забыли пароль?",
   "Q_FORGOT_THE_PASS_PHRASE": "Забыл пароль?",
   "Q_HAVE_AN_ACCOUNT": "Уже есть аккаунт?",
-  "Q_NO_ACCOUNT": "нет аккаунта",
   "RANDOMSLIDESHOW": "Случайный порядок",
   "RATING": "Рейтинг",
   "RATIOS": "Пропорции",
@@ -1904,5 +1901,15 @@
   "MONTHS": "Месяцы",
   "YEARS": "Годы",
   "HOURS": "Часы",
-  "EXPORT_AS_HTML": "Экспорт в HTML"
+  "EXPORT_AS_HTML": "Экспорт в HTML",
+  "PASSWORD_STRENGTH": "Надежность пароля",
+  "WEAK": "Слабый",
+  "STRONG": "Сильный",
+  "VERY_STRONG": "Очень сильный",
+  "PASSWORD_AT_LEAST": "Пароль должен содержать не менее {0} символов.",
+  "WE_HAVE_SENT_CODE": "Мы отправили код на ваш адрес {0}, чтобы вы могли установить новый пароль.",
+  "NEW_PASSWORD": "Новый пароль",
+  "SET_NEW_PASSWORD": "Установить новый пароль",
+  "NEW_CODE_RESENT": "Se ha reenviado un nuevo código.",
+  "PASSWORD_MATCH": "Пароль совпал"
 }
