--- a/locale/zh.json
+++ b/locale/zh.json
@@ -489,7 +489,6 @@
   "NEW_LAYOUT": "提问",
   "NEW_MENU": "提问",
   "NEW_PAGE": "提问",
-  "NEW_PASSWORD": "新密码",
   "NEW_SECTION_GOES_ABOVE": "新部分将放在上面",
   "NEW_SECTION_GOES_BELOW": "新部分将放在下面",
   "NEW_SECTION_GOES_HERE": "新的部分在这里",
@@ -504,7 +503,6 @@
   "NOT_SPAM": "提问",
   "NOT_YET_IMPLEMENTED": "提问",
   "NOW_YOU_ARE_LOGGED_OUT": "现在您已退出...",
-  "NO_ACCOUNT_SIGNUP": "提问",
   "NO_CANCEL": "不，取消！",
   "NO_COMMUNITY": "此操作没有选择社区！",
   "NO_CONTENT": "还没有商品",
@@ -641,10 +639,9 @@
   "Q_DELETE_ACCOUNT": "删除帐户和所有数据？",
   "Q_DELETE_ALL_FILES": "<p>是否要删除</p><p>回收站中的所有文件？</p>",
   "Q_DELETE_FOLLOWING_CONTRIBUTORS": "想要删除以下贡献者？",
-  "Q_FORGOT_PASSWORD": "丢失了密码",
+  "Q_FORGOT_PASSWORD": "丢失了密码?",
   "Q_FORGOT_THE_PASS_PHRASE": "忘记密码？",
   "Q_HAVE_AN_ACCOUNT": "有一个账户？",
-  "Q_NO_ACCOUNT": "没有账号",
   "RANDOMSLIDESHOW": "随机幻灯片",
   "RATING": "评分",
   "RATIOS": "比",
@@ -1904,5 +1901,15 @@
   "MONTHS": "个月",
   "YEARS": "年",
   "HOURS": "小时",
-  "EXPORT_AS_HTML": "导出为 HTML"
+  "EXPORT_AS_HTML": "导出为 HTML",
+  "PASSWORD_STRENGTH": "密码强度",
+  "WEAK": "虚弱的",
+  "STRONG": "强的",
+  "VERY_STRONG": "非常强",
+  "PASSWORD_AT_LEAST": "密码长度必须至少为 {0} 个字符",
+  "WE_HAVE_SENT_CODE": "我们已向您的地址 {0} 发送验证码，以便您可以设置新密码。",
+  "NEW_PASSWORD": "新密码",
+  "SET_NEW_PASSWORD": "设置新密码",
+  "NEW_CODE_RESENT": "已重新发布新代码",
+  "PASSWORD_MATCH": "密码匹配"
 }
